<?xml version='1.0' encoding='utf-8'?>
<resources>
    <string name="download">Download</string>
    <string name="app_name">Wear Level Insight</string>
    <string name="version_format">Package Name: %1$s\nVersion Number: %2$s</string>
    <string name="tagline">Maintain your storage health</string>
    <string name="credits">Credits</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="free">free</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="key_getprefs">Get Preferences</string>
    <string name="key_telegram">Telegram</string>
    <string name="title_telegram">Telegram Channel</string>
    <string name="telegram_summary">Join my Telegram channel for updates and information</string>
    <string name="saved_pref">Saved Preferences</string>
    <string name="saved_pref_summary">Check saved preferences and configurations</string>
    <string name="title_choose_theme">Choose Theme</string>
    <string name="key_theme">Theme</string>
    <string name="current_dark_theme">Dark Theme</string>
    <string name="current_light_theme">Light Theme</string>
    <string name="current_follow_system">System Theme</string>
    <string name="backup_not_found">Backup not found.\nBackup Now!</string>
    <string name="download_failed">Download failed</string>
    <string name="downloading_files">Downloading Files</string>
    <string name="start_downloads">Start downloads...</string>
    <string name="download_complete">Download Complete</string>
    <string name="all_files_downloaded_successfu">All files downloaded successfully</string>
    <string name="failed_to_download_some_files">Failed to download some files</string>
    <string name="key_dependency">Dependency</string>
    <string name="library">Dependencies and Libraries</string>
    <string name="restore_partitions">Restore Partitions</string>
    <string name="dependencies_and_library_used_">Dependencies and libraries used in this app</string>
    <string name="exit_application">Exit Application</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="exit">Exit</string>
    <string name="power_profile">Kernel Profile</string>
    <string name="battery_capacity">System Capacity</string>
    <string name="total_ram">Memory</string>
    <string name="total_storage">Storage</string>
    <string name="active_slot">Active System Slot</string>
    <string name="appearances">Appearances</string>
    <string name="preference_and_dependencies">Preferences and Dependencies</string>
    <string name="more">More</string>
    <string name="processor">Processor</string>
    <string name="graphic">Graphics</string>
    <string name="key_website">key_website</string>
    <string name="visit_my_website">Visit my website</string>
    <string name="website">Website</string>
    <string name="error">Error</string>
    <string name="backup_restore">Backup &amp; Restore Partitions</string>
    <string name="select_all">Select All</string>
    <string name="select_at_least_one_partition">Select at least one partition!</string>
    <string name="backup_partition">Backup Partition</string>
    <string name="backup_completed">Backup Completed!</string>
    <string name="backup_saved">Backup Saved!</string>
    <string name="select_at_least_one_file">Select at least one file!</string>
    <string name="warning_this_will_overwrite_yo">WARNING!!! This will overwrite your partitions with the selected backup files. Are you sure?</string>
    <string name="restore">Restore</string>
    <string name="wear_level_history">Wear Level History</string>
    <string name="restore_completed">Restore Completed!</string>
    <string name="root_access_denied_this_app_ca">Root access denied. This app cannot function without Root.</string>
    <string name="try_again">Try Again</string>
    <string name="select_phone_purchase_date">Select Phone Purchase Date</string>
    <string name="checking">Checking...</string>
    <string name="io_benchmark">I/O Benchmark</string>
    <string name="write">WRITE</string>
    <string name="read">READ</string>
    <string name="latency">LATENCY</string>
    <string name="run_now">RUN</string>
    <string name="previous_write">Previous Write</string>
    <string name="previous_latency">Previous Latency</string>
    <string name="previous_read">Previous Read</string>
    <string name="open">OPEN</string>
    <string name="start">START</string>
    <string name="request_root_access">Request Root Access</string>
    <string name="this_application_requires_root">This application requires Root Access to read low-level storage information (eMMC or UFS Health).</string>
    <string name="grant_root_access">GRANT ROOT ACCESS</string>
    <string name="permission_request">Permission Request</string>
    <string name="grant_all_permission">GRANT ALL PERMISSIONS</string>
    <string name="when_did_you_buy_this">When did you buy this?</string>
    <string name="to_calculate_your_daily_wear_l">To calculate your daily wear level usage accurately, we need to know the purchase date.</string>
    <string name="we_need_the_following_permissi">We need the following permissions to back up your partitions and notify you</string>
    <string name="storage_all_files_access">1. Storage - All Files Access</string>
    <string name="notifications">2. Notifications</string>
    <string name="select_purchase_date">SELECT PURCHASE DATE</string>
    <string name="internal_storage">Internal Storage</string>
    <string name="used">Used</string>
    <string name="start_restore">Start Restore</string>
    <string name="start_backup">Start Backup</string>
    <string name="show_all_partitions_available">Show all available partitions:</string>
    <string name="select_partitions_to_backup">Select partitions to backup</string>
    <string name="backup">Backup</string>
    <string name="no_backup_found">No Backup Found</string>
    <string name="wear_level">Wear Level</string>
    <string name="cycle_usages">Cycle Usages</string>
    <string name="warning">Warning!!</string>
    <string name="this_is_dangerous_feature_you_">This is a dangerous feature. You should know what you are doing.</string>
    <string name="i_understand">I understand</string>
    <string name="leave_it">Leave it</string>
    <string name="delete_backup">Delete Backup</string>
    <string name="are_you_sure_you_want_to_delet">Are you sure you want to delete</string>
    <string name="backup_files_this_action_canno"> backup files? This action cannot be undone.</string>
    <string name="delete">Delete</string>
    <string name="selected_backups_deleted_succe">Selected backups deleted successfully</string>
    <string name="danger">DANGER!</string>
    <string name="you_are_not_allowed_to_restore">You are not allowed to restore these partitions, as it may damage your device.</string>
    <string name="later">Later</string>
    <string name="new_version_available">New Version Available</string>
    <string name="a_new_version_is_available">A new version is available to download \n</string>
    <string name="partitions_to_backup">partitions to Backup?</string>
    <string name="last_backup">Last Backup</string>
    <string name="storage_health">Storage Health</string>
    <string name="emmc">eMMC</string>
    <string name="ufs">UFS</string>
    <string name="unknown">Unknown</string>
    <string name="contributors">Contributors</string>
    <string name="disclaimer_title">DISCLAIMER &amp; AGREEMENT</string>
    <string name="disclaimer_content">
        <b>1. ZERO TELEMETRY &amp; PRIVACY</b>
        This application does not collect a single bit of telemetry data. All data generated or saved remains permanently offline on your device. We respect your complete privacy.
        <b>2. DATA ACCURACY</b>
        This application functions solely to visualize data that is otherwise hidden or obfuscated by your device manufacturer. We do not generate this data; we only read it. Consequently, if there are any inaccuracies in the readings (e.g., Health percentage, Cycle counts), the responsibility lies entirely with your device manufacturer\'s sensors and kernel reporting.
        <b>3. LIMITATION OF LIABILITY</b>
        By using this software, you acknowledge that you do so at your own risk. The provider (Vern Kuato / KuatoDev) shall
        <b>NOT</b>
        be held liable for any damage to your device, including but not limited to:
        • Explosions or Battery fires
        • Device bricking or Bootloops
        • Data loss or Corruption
        • Any hardware or software malfunctions
        <b>4. UNOFFICIAL SOURCES WARNING</b>
        We strongly advise against downloading this application from third-party sources. If you did not download this from the
        <b>https://t.me/vernkuato</b>
        or
        <b>kuatodev.github.io/wearlevelinsight</b>
        , you are running a potentially modified or malicious version. We accept absolutely no liability for issues arising from unofficial builds.
        <b>5. AGREEMENT</b>
        By clicking "Yes, I Agree", you confirm that you have read this disclaimer in its entirety, understand the risks, and accept full responsibility for any consequences resulting from the use of this tool.
    </string>
    <string name="agree">Yes, I Agree</string>
    <string name="disagree">No, I don\'t</string>
    <string name="scroll_to_accept">Please read all to the bottom to accept</string>
    
    <string name="end_of_life">End Of Life</string>
    <string name="please_read">Please READ</string>
    <string name="read_it_untill_latest_paragrap">Read It untill latest paragraph and understand it</string>
    <string name="saved_preferences">Saved Preferences</string>
    <string name="preference">Preference</string>
    <string name="dependencies">Dependencies</string>
    <string name="library_1">Library</string>
    <string name="reboot">Reboot</string>
    <string name="are_you_sure_you_want_to_reboo">Are you sure you want to reboot?</string>
    <string name="reboot_failed_root_required">Reboot failed. Root required</string>
    <string name="date">Date</string>
    <string name="value">Value</string>
</resources>